--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "tailwindcss": "^1.6.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.4",
     "vue-loader": "^15.9.3",
+    "vue-router": "^3.4.3",
     "vue-template-compiler": "^2.6.11"
   },
   "version": "0.1.0",
